<resources>
    <string name="app_name">Star DNS Changer</string>
    <string name="start">Change It!</string>
    <string name="stop">Stop</string>
    <string name="enter_valid_dns">Enter valid DNS Server please.</string>
    <string name="dns_server_1" translatable="false">0.0.0.0</string>
    <string name="dns_server_2" translatable="false">0.0.0.0</string>
    <string name="service_stoppped">DNS service stopped</string>
    <string name="service_started">DNS service started</string>
    <string name="choose_dns_server">Choose DNS Server..</string>
    <string name="custom_dns">Custom DNS Server</string>
    <string name="about">About</string>
    <string name="tell_us_what_you_think">Tell us what you think</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="_2017_hololo_inc" translatable="false">\@2017 Hololo Inc.</string>
    <string name="version">Version %1$s</string>
    <string name="about_app">About Star DNS Changer</string>
    <string name="send_mail">Send mail…</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="auto_start">Auto start on boot</string>
    <string name="service_ready">DNS service ready for start</string>
    <string name="turn_on">Turn On DNS</string>
    <string name="dns_starting">DNS starting.</string>
    <string name="general_settings">General Settings</string>
</resources>
