<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.hololo.app.dnschanger.dnschanger.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="164dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/dns_changer_top_bg" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <com.hololo.app.dnschanger.utils.ui.BehaviorScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="164dp"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:paddingTop="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="52dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:animateLayoutChanges="true"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/chooseButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/button_blue"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/choose_dns_server"
                    android:textAllCaps="false"
                    android:textColor="#2a333a"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/firstDnsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/dns_server_1"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textCursorDrawable="@null"
                    android:textSize="26sp" />


                <EditText
                    android:id="@+id/secondDnsEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="4dp"
                    android:background="@drawable/edittext_border"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/dns_server_2"
                    android:inputType="phone"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textCursorDrawable="@null"
                    android:textSize="26sp" />


            </LinearLayout>

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:background="@drawable/button"
                android:foreground="?selectableItemBackground"
                android:text="@string/start"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </FrameLayout>

    </com.hololo.app.dnschanger.utils.ui.BehaviorScrollView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="center_horizontal|bottom" />

</android.support.design.widget.CoordinatorLayout>
